--- a/identity/adoc/06Authorisation.adoc
+++ b/identity/adoc/06Authorisation.adoc
@@ -6,10 +6,29 @@ Authorization can typically be handled in two ways.
 * Locally by the application or service that is being accessed.
 * Centralizing the authorization policy decisions regardless of the location of the user or the application/service
 
-Since authorization can always be done locally by the application that is being accessed, for example by storing user rights in a local database. We have decided that the Maritime Cloud will not prioritize central support for authorization for the next milestones. Instead focusing on getting authentication right. 
+Since authorization can always be done locally by the application that is being accessed, for example by storing user rights in a local database, we have decided that the Maritime Cloud will not prioritize central support for authorization for the next milestones. Instead focusing on getting authentication right. 
 
 Before implementation of centralized support for authorization can begin there are some obstacles that lie ahead. Mainly because there, unlike authentication, are no good standards for doing authorization. 
 
-Even though there are no real standards there are a number of approaches that are commonly used. The most commonly used probably being role-based access control (RBAC). RBAC is an access control mechanism defined around roles and privileges. The components of RBAC such as role-permissions, user-role and role-role relationships make it simple to do user assignments of entitlements. However, adopting RBAC for the Maritime Cloud opens some questions. For example, who defines the roles and are they global roles. Or are they local to a particular service or a particular organization. For example, an “administrator” role might entail a list of certain privileges in one organization and another list of privileges in another organization. 
+Even though there are no real standards there are a number of approaches that are commonly used. The most commonly used probably being role-based access control (RBAC). RBAC is an access control mechanism defined around roles and privileges. The components of RBAC such as role-permissions, user-role and role-role relationships make it simple to do user assignments of entitlements. However, adopting RBAC for the Maritime Cloud opens some questions. For example, who defines the roles and are they global roles. Or are they local to a particular service or a particular organization. For example, an "administrator" role might entail a list of certain privileges in one organization and another list of privileges in another organization. 
 
-Given these issues and many other we have to decide to wait on the various to sub projects to implement authorization and then compile all the different approaches and try and make something generic.
+Given these issues and many other we have to decide not to implement central authorization in the Maritime Cloud. Instead the Maritime Cloud will provide the information that can be used for authorization in the services.
+
+As described in the sections about <<OpenID Connect>> and <<Certificate Attributes>>, both authentication methods provides information about the authenticated user that can be used for authorization:
+
+* The organization the entity belong to.
+* The permissions/roles/groups the entity has been assigned by the organization.
+
+When an organization wishes to use a service, the organization will then make an agreement with that about how access levels shall be defined in that service, based on the permissions. This will have to be done for each service the organization wishes to use.
+
+=== Example of Authorization
+
+As an example of how authorization can be done, let us have a look at how it is handled inside the Maritime Cloud Identity Registry. When it comes to authorization, the Identity Registry will have the same information about its users as any other service in the Maritime Cloud.
+
+The Identity Registry currently has three roles:
+
+* *ROLE_USER* - Grants read access to information about the organization the user belongs to (will be assigned by default to authenticated users).
+* *ROLE_ORG_ADMIN* - Grants read and write access to information about the organization the user belongs to.
+* *ROLE_SITE_ADMIN* - Grants access to administrative functions in the Identity Registry.
+
+In this example we will focus on the first two. Let us assume that the Organization wants to grant members of the internal "E-navigation" department administrative rights in the Maritime Cloud Identity Registry. In DMAs Identity Provider setup the department name is automatically added to the "permissions" attribute. So to make this mapping the current DMA administrator sets up a role mapping between the permission "E-navigation" and the role ROLE_ORG_ADMIN. Once this is done, all members of the DMA E-navigation department will have administrative rights for the DMA organization inside the Identity Registry. As noted earlier, these rights only apply inside the Identity Registry. Other services must create a similar setup with mapping of roles and permissions.
