--- a/identity/adoc/05X509Certificates.adoc
+++ b/identity/adoc/05X509Certificates.adoc
@@ -1,32 +1,31 @@
 == PKI and X.509 Certificates
-A *public key infrastructure (PKI)* is a set of hardware, software, people, policies, and procedures needed to create, manage, distribute, use, store, and revoke digital authentication certificates and manage public-key encryption. Thereby helping an organization establish and maintain a trustworthy networking environment. There is no inherent requirement for using a PKI based solution for enabling secure machine to machine (M2M) communication. But it is the most commonly used solution and lots of software, standards and best practices exists for utilizing it. The choice of using PKI based on the X.509 standard for M2M communication in the Maritime Cloud was thus straightforward.
+A *Public Key Infrastructure (PKI)* is a set of hardware, software, people, policies, and procedures needed to create, manage, distribute, use, store, and revoke digital authentication certificates and manage public-key encryption. Thereby helping an organization establish and maintain a trustworthy networking environment. There is no inherent requirement for using a PKI based solution for enabling secure machine to machine (M2M) communication, but it is the most commonly used solution and lots of software, standards and best practices exists for utilizing it. The choice of using PKI based on the X.509 standard for M2M communication in the Maritime Cloud was thus straightforward.
 
-The key piece in a PKI architecture is a PKI CA (Certificate Authority) which is an entity that issues digital certificates. A digital certificate that certifies the ownership of a public key by the named subject of the certificate. An obvious example would be creating a certificate for a vessel, which can serve to certify that a given document was indeed signed by someone in possession of the certificate issued to that vessel.
+The key piece in a PKI architecture is a PKI CA (Certificate Authority) which is an entity that issues digital authentication certificates. A digital certificate that certifies the ownership of a public key by the named subject of the certificate. An obvious example would be creating a certificate for a vessel, which can serve to certify that a given document was indeed signed by someone in possession of the certificate issued to that vessel.
 
 One of the most important aspects of designing a PKI based architecture is the certificate hierarchy planning because the design will affect how certificates are validated and used by PKI-enabled actors. Normally a PKI based architecture is arranged in a tree like hierarchy with a single root entity in the top and with numerous leaves called sub CAs. Each sub CA can have their own sub CA thereby forming a tree with a single entity at the top. Each leave in the tree is responsible for creating certificates, for example, ships or organizations. The reason for doing this is to be able to delegate the responsibility to different parties. For example, in the case of the Maritime Cloud one could envision that at some point in the future every flag state would be their own sub CA. Having the sole responsibility of issuing certificates for vessels registered under their own flag.  
 
 image::ca.png[Overview]
 
-In the current version of the Maritime Cloud we are working with a single sub CA that has the responsibility for issuing all certificates. However, this can gradually be changed to support another PKI hierarchy design.
-
+In the current version of the Maritime Cloud we are working with a single sub CA that has the responsibility for issuing all certificates. This sub CA is located at the Maritime Cloud Identity Registry. However, this can gradually be changed to support another PKI hierarchy design.
 
 The most important functionality of a CA is issuing digital certificates. A digital certificate certifies the ownership of a public key by the named subject of the certificate. This allows others (relying parties) to rely upon signatures or on assertions made about the private key that corresponds to the certified public key. In this model of trust relationships, a CA is a trusted third party—trusted both by the subject (owner) of the certificate and by the party relying upon the certificate. In the case of the Maritime Cloud these certificates are typically used to make secure connections between maritime actors over the Internet. A certificate is required in order to avoid the case that a malicious party which happens to be on the path to the target server pretends to be the actual target. Such a scenario is commonly referred to as a man-in-the-middle attack. The client uses the CA certificate to verify the CA signature on the server certificate, as part of the checks before establishing a secure connection. Likewise, the server has the option of inspecting the clients certificate before allowing it to connect.
 
-To issue a new certificate for, for example, a vessel. The administrator the organization who owns the ship will need to log in to the Maritime Cloud Portal and use its functionality for issuing new certificates. The certificate being issued will contain information about the name of the ship, the owner, the flag state and other attributes such as MMSI and IMO number. In the current implementation there is no validation of this information other than that the organization must have been accepted when signing up. We do not expect this to be a problem for the foreseeable future as the number of participating parties is still relatively small. In the future where a lot of more organizations has been added it might, for example, be possible to integrate with national registries. So an automated check of these information can be made.
+To issue a new certificate for, for example, a vessel. An administrator for the organization who owns the ship will need to log in to the Maritime Cloud Portal and use its functionality for issuing new certificates. The certificate being issued will contain information about the name of the ship, the owner, the flag state and other attributes such as MMSI and IMO number. In the current implementation there is no validation of this information other than that the organization must have been accepted when signing up. We do not expect this to be a problem for the foreseeable future as the number of participating parties is still relatively small. In the future where a lot of more organizations has been added it might, for example, be possible to integrate with national registries. So an automated check of these information can be made.
 
 After having issued a certificate the administrator can now install it on the ship in some way. The actual logistics about how and where to install it is outside of the scope of the identity registry as this might vary a lot between organizations and projects. This also reduces the functionality of the identity registry to just provide the core functionality of Identity management. Allowing users to be able to build innovative solutions on top of it. This also applies directly to machine to machine communication. The identity registry places no restrictions about what kind of machine to machine communication protocols that should be used. It just provides the basic infrastructure to allow for each machine to authenticate the host in the other end. Letting each project select their protocols if needed.
 
+=== Issuing Certificates
 
+As mentioned above, it is currently only the Maritime Cloud Identity Registry that can issue valid certificates for use within the Maritime Cloud context. At the moment it is possible to issue certificates for organizations, vessels, users, devices and services. Note that an organization currently cannot function as a sub CA, so it cannot use its certificate to issue other certificates. Also note that there are currently no support for generating certificates using a certificate signing request (CSR).
 
+To actually get a certificate from the Maritime Cloud Identity Registry, it is recommended to use the Maritime Cloud Management Portal, though it is also possible to directly use the REST interface of the Identity Registry, which is what the management portal does.
 
-=== Creating a new Certificate
-Currently, the only way to generate a new certificate is to log into the Maritime Cloud portal and create the certificate in a browser.
-
-This is done by first select the entity for which you wish to create a certificate. In this example we have created a vessel called "Harmony of the Seas". As can be seen from the screenshot the vessel currently has no certificates.
+When in the management portal first select the entity for which you wish to create a certificate. In this example we have created a vessel called "Harmony of the Seas". As can be seen from the screenshot the vessel currently has no certificates.
 
 image::new-certificate-step-1.png[Overview]
 
-In order to create a new certificat for the vessel select *+New Certificate*. A new dialog box asking for confirmation is displayed. After having confirmed the generation. A new dialog box will de displayed where it is possible to download a zip file consisting of the generated certificate and its private and public key. It is important to remember to download the file as the the private key is no longer available after the page is closed.
+In order to create a new certificate for the vessel select *+New Certificate*. A new dialog box asking for confirmation is displayed. After having confirmed the generation. A new dialog box will de displayed where it is possible to download a zip file consisting of the generated certificate and its private and public key. It is important to remember to download the file as the the private key is no longer available after the page is closed.
 
 image::new-certificate-step-3.png[Overview]
 
@@ -34,10 +33,8 @@ After the certificate has been generated it can be seen in the list of registere
 
 image::new-certificate-step-4.png[Overview]
 
-There are currently no support for generating certificates using a certificate signing request. However, this is a feature being worked on and it will be available in future releases.
-
 === Certificate Attributes
-The Maritime Cloud can issue X.509 certificates for the users which can then be used for authentication. Service providers relying on X.509 certificate authentication must obtain and install the MaritimeCloud root certificate into their webservice. 
+The Maritime Cloud can issue X.509 certificates for the users which can then be used for authentication. Service providers relying on X.509 certificate authentication must obtain and install the Maritime Cloud root certificate into their webservice. 
 
 The standard information present in an X.509 certificate includes:
 
@@ -51,21 +48,22 @@ The standard information present in an X.509 certificate includes:
 
 The Subject distinguished name field will consists of the following items:
 
+
 [options="header"]
 |===
-|Field|User|Vessel|Device|Service
-|CN (CommonName)|Full name|Vessel name|Device name|Service Name
-|O (Organization)|Organization Id+Name, separated by ";"|Organization Id+Name, separated by ";"|Organization Id+Name, separated by ";"|Organization Id+Name, separated by ";"
-|OU (Organizational Unit)|"user"|"vessel"|"device"|"service"
-|C (Country)|Organization country code|Organization country code|Organization country code|Organization country code
-|E (Email)|User email|||
+|Field|User|Vessel|Device|Service|Organization
+|CN (CommonName)|Full name|Vessel name|Device name|Service Name|Organization Name
+|O (Organization) 5.1+^.>|Organization Id+Name, separated by ";"
+|OU (Organizational Unit)|"user"|"vessel"|"device"|"service"|"organization"
+|E (Email)|User email||||Organization email
+|C (Country) 5.1+^.>|Organization country code
 |===
 
 An example of the fields for a vessel could look like this:
 ****
 C=DK, O=DMA;Danish Maritime Authority, OU=vessel, CN=JENS SØRENSEN
 ****
-Finally, In additions to the information stored in the standard X.509 attributes listed above. The X509v3 extension SubjectAlternativeName (SAN) extension is used to store extra information. There already exists some predefined fields for the SAN extension, but they do not match the need we have for maritime related fields. Therefore the “otherName” field is used, which allows for using a Object Identifier (OID) to define custom fields. The OIDs currently used are not registered at ITU, but is randomly generated using a tool provided by ITU (see http://www.itu.int/en/ITU-T/asn1/Pages/UUID/uuids.aspx). See the table below for the fields defined, the OID of the fields and which kind of entity that uses the fields. We know this is not a very elegant solution but unfortunantely there are few alternatives in the X.509 standard.
+Finally, In additions to the information stored in the standard X.509 attributes listed above, the X509v3 extension SubjectAlternativeName (SAN) extension is used to store extra information. There already exists some predefined fields for the SAN extension, but they do not match the need we have for maritime related fields. Therefore the “otherName” field is used, which allows for using a Object Identifier (OID) to define custom fields. The OIDs currently used are not registered at ITU, but are randomly generated using a tool provided by ITU (see http://www.itu.int/en/ITU-T/asn1/Pages/UUID/uuids.aspx). See the table below for the fields defined, the OIDs of the fields and which kind of entities that uses the fields.
 
 [options="header"]
 |===
@@ -92,3 +90,8 @@ Service -> "Identity Registry": Request certificate revocation status
 Service -> Service: Extract Organization name and attributes for authorization
 Service -> User: Return response
 ....
+
+The checking of the certificate revocation status can be done in two ways:
+
+. Call the OCSP interface provided by the Identity Registry for each certificate.
+. Periodically download a Certificate Revocation File from the Identity Registry and use it check certificates locally.
