--- a/identity/adoc/05X509Certificates.adoc
+++ b/identity/adoc/05X509Certificates.adoc
@@ -57,12 +57,13 @@ The Subject distinguished name field will consists of the following items:
 |OU (Organizational Unit)|"user"|"vessel"|"device"|"service"|"organization"
 |E (Email)|User email||||Organization email
 |C (Country) 5.1+^.>|Organization country code
+|UID 4.1+^.>|Entity unique organizational Id|Organization shortname
 |===
 
 An example of the fields for a vessel could look like this:
-****
-C=DK, O=DMA;Danish Maritime Authority, OU=vessel, CN=JENS SØRENSEN
-****
+....
+C=DK, O=DMA;Danish Maritime Authority, OU=vessel, CN=JENS SØRENSEN, UID=dma.vessel2
+....
 Finally, In additions to the information stored in the standard X.509 attributes listed above, the X509v3 extension SubjectAlternativeName (SAN) extension is used to store extra information. There already exists some predefined fields for the SAN extension, but they do not match the need we have for maritime related fields. Therefore the “otherName” field is used, which allows for using a Object Identifier (OID) to define custom fields. The OIDs currently used are not registered at ITU, but are randomly generated using a tool provided by ITU (see http://www.itu.int/en/ITU-T/asn1/Pages/UUID/uuids.aspx). See the table below for the fields defined, the OIDs of the fields and which kind of entities that uses the fields.
 
 [options="header"]
@@ -73,6 +74,7 @@ Finally, In additions to the information stored in the standard X.509 attributes
 |IMO number|`2.25.291283622413876360871493815653100799259`|Vessels
 |MMSI number|`2.25.328433707816814908768060331477217690907`|Vessels
 |AIS shiptype|`2.25.107857171638679641902842130101018412315`|Vessels
+|Port of register|`2.25.285632790821948647314354670918887798603`|Vessels
 |MRN|`2.25.271477598449775373676560215839310464283`|Vessels, Users, Devices, Services
 |Permissions|`2.25.174437629172304915481663724171734402331`|Vessels, Users, Devices, Services
 |===
@@ -85,7 +87,7 @@ A crucial part of any PKI is to support revocation of certificates, so that cert
 . Call the OCSP interface provided by the Identity Registry for each certificate.
 . Periodically download a Certificate Revocation File from the Identity Registry and use it check certificates locally.
 
-The endpoints for both the OCSP interface and the Certificate Revocation File are embedded into the certificates issued by the Maritime Cloud Identity Registry, and are currently https://api.maritimecloud.net/x509/api/certificates/crl and ocsp-url: https://api.maritimecloud.net/x509/api/certificates/ocsp.
+The endpoints for both the OCSP interface and the Certificate Revocation File are embedded into the certificates issued by the Maritime Cloud Identity Registry, and are currently https://api.maritimecloud.net/x509/api/certificates/crl and https://api.maritimecloud.net/x509/api/certificates/ocsp.
 
 
 === Certificate Authentication Flow
@@ -96,9 +98,132 @@ To illustrate the authentication flow the sequence diagram below is provided.
 ....
 autonumber
 User -> Service: User connects using certificate
+activate Service
 Service -> Service: Client certificate is validated
 Service -> "Identity Registry": Request certificate revocation status
+activate "Identity Registry"
 "Identity Registry" -> Service: Revocation status response 
+deactivate "Identity Registry"
 Service -> Service: Extract Organization name and attributes for authorization
 Service -> User: Return response
+deactivate Service
+....
+
+
+=== Obtaining a OpenId Connect Token using a Certificate
+
+It is possible to obtain OpenID Connect Tokens using certificate authentication. The idea is that instead of authenticating by being redirected to an Identity Provider as in the normal OpenID Connect flow, you authenticate at the Identity Broker by using your certificate (that has been issued by the Maritime Cloud Identity Registry). This authentication would work in the same way as when authenticating to any service. When authentication has been succesful the Identity Broker can then issue a JWT-token, which is what the OpenId Connect authentication use. So in effect what we have is a "bridge" between the 2 authentication approaches.
+
+An example of use could be that a device (which has been issued certificates) wishes to authenticate securely with a service, but the service only supports OpenId Connect authentication. Using the approach mentioned above, the device can use its certificate to get an OpenId Connect token, which can then be used to authenticate to the service.
+
+The flow looks like the diagram below:
+
+[plantuml]
+....
+autonumber
+User -> "Maritime Cloud\nIdentity Broker": User requests OpenId Connect Authentication Code,\nconnects using certificate
+activate "Maritime Cloud\nIdentity Broker"
+"Maritime Cloud\nIdentity Broker" -> "Maritime Cloud\nIdentity Registry": Request certificate revocation status
+activate "Maritime Cloud\nIdentity Registry"
+"Maritime Cloud\nIdentity Registry" -> "Maritime Cloud\nIdentity Broker": Revocation status response
+deactivate "Maritime Cloud\nIdentity Registry"
+"Maritime Cloud\nIdentity Broker" -> "Maritime Cloud\nIdentity Broker": Generate OpenId Connect Authentication\nCode based on the certificate
+"Maritime Cloud\nIdentity Broker" -> User: Return OpenId Connect Authentication Code
+deactivate "Maritime Cloud\nIdentity Broker"
+User -> "Maritime Cloud\nIdentity Broker": User requests OpenId Connect Tokens,\npresents Authentication Code
+activate "Maritime Cloud\nIdentity Broker"
+"Maritime Cloud\nIdentity Broker" -> "Maritime Cloud\nIdentity Broker": Generate OpenId Connect Authentication Tokens
+"Maritime Cloud\nIdentity Broker" -> User: Return OpenId Connect Tokens
+deactivate "Maritime Cloud\nIdentity Broker"
+User -> Service: User connects using OpenID Connect Token
+activate Service
+Service -> "Maritime Cloud\nIdentity Broker": Request token validation
+activate "Maritime Cloud\nIdentity Broker"
+"Maritime Cloud\nIdentity Broker" -> Service: Response for token validation
+deactivate "Maritime Cloud\nIdentity Broker"
+Service -> User: Return response
+deactivate Service
+....
+
+
+==== Example of Obtaining a OpenId Connect Token using a Certificate
+
+In this simple example we will assume that a certificate and key--pair has been issued to the entity who wishes to authenticate. This example makes use of `curl` a commandline tool available on Linux and Mac OS X.
+
+The authentication involves 2 steps: 
+
+. Obtaining a temporary Authorization Code using a certificate.
+. Obtaining a OpenId Connect Token using the Authorization Code.
+
+These 2 steps are actually standard in the http://openid.net/specs/openid-connect-core-1_0.html#CodeFlowAuth[OpenID Connect Authorization Code Flow], though normally certificates are not the standard authentication method.
+
+First we obtain the code by issuing this command:
+
+....
+curl -v -L --key PrivateKey.pem --cert Certificate.pem 'https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/auth?client_id=cert2oidc&redirect_uri=http%3A%2F%2Flocalhost%3A99&response_type=code&kc_idp_hint=certificates&scope=openid'
+....
+
+Let us break down the command:
+
+* `curl -v -L`: `curl` is the tool itself. `-v` means it will be in verbose mode and `-L` means curl will follow HTTP redirects. We need to follow redirects since that is used by OpenID Connect to go back and forth between servers, and the verbose mode is needed because we would like to see where we are redirected -- especially the last redirect, but more about that later.
+* `--key PrivateKey.pem --cert Certificate.pem`: Here the private key and the certificate is given to `curl` in PEM format.
+* The last part is the URL which itself is multiple parts:
+** Address of the authentication endpoint: `https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/auth`
+** Parameters: `client_id=cert2oidc&redirect_uri=http%3A%2F%2Flocalhost&response_type=code&kc_idp_hint=certificates&scope=openid`. These can be also be broken down:
+*** `client_id=cert2oidc`: This is a special OpenID Connect client setup to be used for certificate authentication.
+*** `redirect_uri=http%3A%2F%2Flocalhost%3A99`: This is where the authentication server will redirect to at the end of the authentication. The parameter is URL encoded and decode looks like this: `http://localhost:99`. This address is meant to be invalid, since we want the last redirect to fail.
+*** `response_type=code`: This defines that we uses the Authorization Flow as mentioned above.
+*** `kc_idp_hint=certificates`: This tells the Identity Broker that we wants to authenticate using the Certificate Identity Provider.
+*** `scope=openid`: And finally, this define that we are using OpenID Connect.
+
+When the command runs it returns a lot of output, due to being in verbose mode. We will not go into detail, but quite a few redirects happens, as described in the sequences diagram above. The last redirect however fails, which is intended. The final output will look like this:
+
+....
+* Issue another request to this URL: 'http://localhost:99?code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961'
+* Rebuilt URL to: http://localhost:99/?code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961
+*   Trying 127.0.0.1...
+* connect to 127.0.0.1 port 99 failed: Connection refused
+* Failed to connect to localhost port 99: Connection refused
+* Closing connection 1
+curl: (7) Failed to connect to localhost port 99: Connection refused
+....
+
+Here we can recognize `http://localhost:99` from the `redirect_uri` parameter described earlier. We can also see that a `code` parameter is in the url, in this case with the value `hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961`. It is this code we need to in the second step of authentication to get the OpenID Connect Tokens. We will again use `curl` in the second step:
+
+....
+curl --data "grant_type=authorization_code&client_id=cert2oidc&code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961&redirect_uri=http%3A%2F%2Flocalhost" https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/token
+....
+
+Again, let us break down the command. In this case the command consist of 3 parts, `curl` -- the tool itself, data-parameters and an URL. We will concentrated on the data-parameters. Note that this is a HTTP POST request, which is why the parameters is supplied in a separate argument and not as part of the URL.
+
+* `grant_type=authorization_code`: This specifies that we will use an authorization code to authenticate ourself in this call.
+* `client_id=cert2oidc`: The id of the special client, as mentioned above.
+* `code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961`: The code we obtained earlier.
+* `redirect_uri=http%3A%2F%2Flocalhost`: The redirect url, the same as before, though not actively used in this case.
+
+When this call runs there will be no redirection, so we do not need to tell `curl` to follow redirects. Instead the returned output will be the tokens that we wish to use, in a format like this:
+
+....
+{
+   "access_token":"eyJhbGciOiJ...uXoHudIM1yiDBYj8g",
+   "expires_in":300,
+   "refresh_expires_in":1800,
+   "refresh_token":"eyJhbGciOiJ...iv7rKSa__IKy983Gg",
+   "token_type":"bearer",
+   "id_token":"eyJhbGciOiJ...Ycp2GupfpTTgRkhtnw",
+   "not-before-policy":0,
+   "session_state":"94487eaa-b77f-4b6c-8db1-c574fc6a09da"
+}
+....
+
+The `access_token` is the token that should be used we communicating with services in the Maritime Cloud context. The token should be embedded in the HTTP header. When using `curl` it can be done like this:
+
+....
+curl -H "Authorization: Bearer eyJhbGciOiJ...uXoHudIM1yiDBYj8g" https://api.maritimecloud.net/oidc/api/org/DMA
+....
+
+The `refresh_token` is used to re-authenticate to get a new set of tokens when the access_token has expired, in this case 300 seconds after it has been issued, as seen in the `expires_in` attribute. The new set of tokens can then be obtain with a HTTP POST like this:
+
+....
+curl --data "grant_type=refresh_token&client_id=cert2oidc&refresh_token=eyJhbGciOiJ...iv7rKSa__IKy983Gg" https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/token
 ....
